src/objects/Ledger__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associated_Dishonour_Credit_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>if the dishonour penalty is recovered the corresponding credit legder entry would be  populated as a lookup in the dishonour debit ledger record</description>
        <inlineHelpText>if the dishonour penalty is recovered the corresponding credit legder entry would be  populated as a lookup in the dishonour debit ledger record</inlineHelpText>
        <label>Associated Dishonour Credit Ledger</label>
        <referenceTo>Ledger__c</referenceTo>
        <relationshipLabel>Ledgers (Associated Dishonour Credit Ledger)</relationshipLabel>
        <relationshipName>Ledgers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Service_Tax_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Service Tax Ledger</label>
        <referenceTo>Ledger__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance_Amount__c</fullName>
        <formula>Debit_Amount__c - Credit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Pay_Plan_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Pay Plan Header</label>
        <referenceTo>Customer_Pay_Plan_Header__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debit_Amount__c</fullName>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit_Credit__c</fullName>
        <label>Debit/Credit</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demand_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demand Detail</label>
        <referenceTo>Demand_Detail__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demand_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demand Invoice</label>
        <referenceTo>Demand_Invoice__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effect_To_Date__c</fullName>
        <formula>Customer_Pay_Plan_Header__r.Effect_To_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effect To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Charges</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_ledger_created_through_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ledger created through trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ledger_Type__c</fullName>
        <label>Ledger Type</label>
        <picklist>
            <picklistValues>
                <fullName>Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Reversal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt Details</label>
        <referenceTo>Receipt_Details__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reciepts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <referenceTo>Receipt__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Customer_Pay_Plan_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Customer Pay Plan Detail</label>
        <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_Ledger_Customer__c</fullName>
        <formula>IF( Opportunity__r.Id = Project_Unit__r.Customers__r.Id,&apos;True&apos;, &apos;False&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Ledger Customer</label>
        <type>Text</type>
    </fields>
    <label>Ledger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Debit_Credit__c</columns>
        <columns>Global_Charges__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Project_Unit__c</columns>
        <columns>Standard_Customer_Pay_Plan_Detail__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Ledger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ledgers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>